Fix floating windows on small devices

--- a/ui/apps/themes/components/window.less
+++ b/ui/apps/themes/components/window.less
@@ -491,6 +491,7 @@
     z-index: 12;
     background: transparent;
     outline: 0;
+    max-height: 100%;
 
     .floating-window-content { .elevation-2(); }
     &.active {
